[gd_scene load_steps=5 format=3 uid="uid://dxzyw5rkqh1kk"]

[ext_resource type="Script" path="res://actors/Gem.gd" id="1_gem"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gem"]
radius = 16.0

[sub_resource type="Animation" id="Animation_sparkle"]
resource_name = "sparkle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(16, 16), Vector2(18, 18), Vector2(16, 16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GlowSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.3), Color(1, 1, 1, 0.8), Color(1, 1, 1, 0.3)]
}

[sub_resource type="Animation" id="Animation_collect"]
resource_name = "collect"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(16, 16), Vector2(24, 24), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[node name="Gem" type="Area2D"]
script = ExtResource("1_gem")

[node name="GlowSprite" type="Sprite2D"]
modulate = Color(1, 1, 1, 0.3)
scale = Vector2(24, 24)

[node name="Sprite2D" type="Sprite2D"]
modulate = Color(0, 1, 1, 1)
scale = Vector2(16, 16)

[node name="CollisionShape2D" type="CollisionShape2D"]
shape = SubResource("CircleShape2D_gem")

[node name="AnimationPlayer" type="AnimationPlayer"]
autoplay = "sparkle"

[node name="CollectParticles" type="CPUParticles2D"]
emitting = false
amount = 30
lifetime = 1.5
texture_filter = 1
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, -1)
spread = 360.0
initial_velocity_min = 80.0
initial_velocity_max = 150.0
gravity = Vector2(0, 50)
scale_amount_min = 0.3
scale_amount_max = 1.0
color = Color(0, 1, 1, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]